test/compile_errors/err_regex_capture_out_of_scope.w
//! expect-check-fail: undefined variable

fn main:
    if "abc" =~ /(a)/:
        assert($1 == "a")
    print($1)
